# skywrapper

./: .gitignore_  CHANGELOG.md  Makefile  README.md  api_data.py  codeql-analysis.yml  profile_info.py  requirements-dev.txt  setup.cfg  skyblock_data.py  skyblock_player.py
constants/: bot_config.py  skyblock.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/api/: exceptions.rst  hypixel.rst  index.rst  internal.rst  mojang.rst  skyblock.rst
docs/source/api/async/: index.rst
skywrapper/: exceptions.py  http.py  mojang.py
skywrapper/hypixel/: __init__.py
skywrapper/skyblock/: __init__.py
utils/: errors.py  helpers.py
