[metadata]
name = skywrapper
version = 0.0.1
author = Seazyns
author_email = 68800400+Seazyns@users.noreply.github.com
maintainer = Sophie
maintainer_email = me@kcomain.dev

keywords = skyblock, api
license = GNU Affero General Public License v3
license_files = LICENSE
url = https://github.com/celestialsb/api-wrapper
description = API Wrapper for Hypixel Skyblock
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Source = https://github.com/CelestialSB/skywrapper
    Documentation = https://skywrapper.readthedocs.io
    Bug Tracker = https://github.com/CelestialSB/skywrapper/issues

classifiers =
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
package_dir =
packages = find:

python_requires = >=3.6

[options.extras_require]
async = aiohttp
